--- a/app/src/routes/TasksList.less
+++ b/app/src/routes/TasksList.less
@@ -23,5 +23,13 @@
     align-items: flex-start;
     border: 1px solid black;
     padding: 10px;
+    min-width: 200px;
+    min-height: 50px;
+    textarea {
+      width: auto;
+    }
+    button {
+      align-self: flex-end;
+    }
   }
 }
