--- a/app/src/app.less
+++ b/app/src/app.less
@@ -13,7 +13,7 @@ body {
 
 .header {
   width: 100%;
-  height: 10%;
+  height:76.72px;
   border-bottom: 1px black solid;
   .sub-header {
     display: flex;
