--- a/app/src/routes/TasksList.less
+++ b/app/src/routes/TasksList.less
@@ -4,27 +4,48 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  min-height: 150px;
-  .add-task-button {
-    width:200px;
-    height: 100px
+  .add-task-plus {
+    float:left;
+    position: absolute;
+    width:50px;
+    height: 50px;
+    margin:10px;
+    &:hover {
+      cursor: pointer;
+      circle {
+        transition: fill .2s ease;
+        fill:red!important;
+      }
+    }
+    circle {
+      transition: fill .2s ease;
+      fill:#43B05C;
+    }
   }
+}
+
+.tasks-container {
+  text-align: center;
+  max-height: ~"calc(100vh - 80px)";
+  overflow: auto;
 }
 
 .tasks {
   flex:8;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  max-height: ~"calc(100vh - 85px)";
+  overflow: auto;
+  display: inline-block;
   width: auto;
+  margin: 0 auto;
   .task {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     border: 1px solid black;
     padding: 10px;
-    min-width: 200px;
+    min-width: 50vw;
     min-height: 50px;
+    margin:10px;
     textarea {
       width: auto;
     }
