--- a/app/src/routes/TasksList.less
+++ b/app/src/routes/TasksList.less
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  transition: all .2s ease;
   .add-task-plus {
     float:left;
     position: absolute;
@@ -51,6 +52,10 @@
     &.dragged {
       position: absolute;
       opacity: 0.3;
+    }
+    &.shadow {
+      opacity: 0.4;
+      border: 1px solid rgba(0,0,0,0.4);
     }
     display: flex;
     flex-direction: column;
