--- a/app/src/routes/TasksList.less
+++ b/app/src/routes/TasksList.less
@@ -66,7 +66,11 @@
     min-height: 50px;
     margin:10px;
     textarea {
-      width: auto;
+      width: 80%;
+      height: auto;
+    }
+    input {
+      width: 80%;
     }
     button {
       align-self: flex-end;
