--- a/app/src/routes/Login.less
+++ b/app/src/routes/Login.less
@@ -5,4 +5,17 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
+  form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    label {
+      width: 100%;
+      padding: 10px 0;
+      input {
+        float: right;
+      }
+    }
+  }
 }
