--- a/app/src/routes/TaskTracker.less
+++ b/app/src/routes/TaskTracker.less
@@ -49,22 +49,28 @@
     align-self: flex-end;
   }
   .task {
+    display: flex;
+    -webkit-box-shadow: -3px 6px 8px 0px rgba(0,0,0,0.36);
+    -moz-box-shadow: -3px 6px 8px 0px rgba(0,0,0,0.36);
+    box-shadow: -3px 6px 8px 0px rgba(0,0,0,0.36);
+    cursor: pointer;
+    flex-direction: column;
+    align-items: flex-start;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 10px;
+    min-width: 50vw;
+    min-height: 50px;
+    margin:10px;
     &.dragged {
       position: absolute;
       opacity: 0.3;
+      margin:0;
     }
     &.shadow {
       opacity: 0.4;
       border: 1px solid rgba(0,0,0,0.4);
     }
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    border: 1px solid black;
-    padding: 10px;
-    min-width: 50vw;
-    min-height: 50px;
-    margin:10px;
     textarea {
       width: 80%;
       height: auto;
